--- a/dist.ini
+++ b/dist.ini
@@ -61,9 +61,13 @@ location = root
 [Test::PodSpelling]
 
 [Test::Compile]
+fail_on_warning = 1
 bail_out_on_fail = 1
 
 [Test::MinimumVersion]
+:version = 2.000003
+max_target_perl = 5.008008
+
 [MetaTests]
 [Test::CPAN::Changes]
 [Test::Version]
