--- a/dist.ini
+++ b/dist.ini
@@ -5,6 +5,16 @@ copyright_year      = 2013
 license             = Perl_5
 
 [@Author::ETHER]
+:version = 0.018
+Test::MinimumVersion.max_target_perl = 5.006
 
-[Test::Kwalitee::Extra]
+[MetaResources]
+x_IRC = irc://irc.perl.org/#perl-qa
+x_MailingList = http://lists.perl.org/list/perl-qa.html
 
+[Prereqs / DevelopRequires]
+Test::Warnings = 0
+
+[Test::Synopsis]
+
+[Test::CleanNamespaces]
